k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slouch-ui
spec:
  selector:
    matchLabels:
      app: slouch-ui
  template:
    metadata:
      labels:
        app: slouch-ui
    spec:
      containers:
      - name: slouch-ui
        image: slouch-ui
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: slouch-ui
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  labels:
    name: ui
spec:
  ingressClassName: nginx
  rules:
  - host: ui-127-0-0-1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui
            port: 
              number: 3000
